--- a/readme
+++ b/readme
@@ -1,3 +1,12 @@
 inserire:
   scheda,
   funzionalità tasti gdr
+
+
+max 3 max 5
+
+da group a super group errore id to long
+
+Correggere timer durante cambio id da gruppo a super gruppo
+
+correggere delete usr in pg in creazione
