--- a/readme
+++ b/readme
@@ -5,7 +5,7 @@ inserire:
 
 max 3 max 5
 
-da group a super group errore id to long
+DONE  da group a super group errore id to long 
 
 Correggere timer durante cambio id da gruppo a super gruppo
 
